--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "openai-agents>=0.2.4",
+    "ratelimit>=2.2.1",
     "tavily-python>=0.7.10",
 ]
