--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "openai-agents>=0.2.4",
-    "ratelimit>=2.2.1",
+    "pytest>=7.4.0",
+    "pytest-asyncio>=0.21.0",
     "tavily-python>=0.7.10",
 ]
