--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "openai-agents>=0.2.4",
-    "pytest>=7.4.0",
-    "pytest-asyncio>=0.21.0",
     "tavily-python>=0.7.10",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.1.0",
 ]
