--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run tests with pytest
       run: |
-        pytest tests/ --verbose --cov=src --cov-report=xml
+        pytest  --verbose --cov=src --cov-report=xml
     - name: Upload coverage report
       uses: codecov/codecov-action@v4  # Optional: Upload coverage to Codecov
       with:
