--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run tests with pytest
+      env:
+        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }} 
+        TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }} 
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }} 
       run: |
         pytest  --verbose --cov=src --cov-report=xml
     - name: Upload coverage report
