fixed pylint issues

--- a/.pylintrc
+++ b/.pylintrc
@@ -442,6 +442,8 @@ disable=raw-checker-failed,
         line-too-long,
         broad-exception-caught,
         missing-module-docstring,
+        unused-argument,
+        
 
 
 # Enable the message, report, category or checker with the given id(s). You can
