fixed pylint issues

--- a/.pylintrc
+++ b/.pylintrc
@@ -443,6 +443,8 @@ disable=raw-checker-failed,
         broad-exception-caught,
         missing-module-docstring,
         unused-argument,
+        too-many-nested-blocks,
+        too-many-statements,
         
 
 
