--- a/.pylintrc
+++ b/.pylintrc
@@ -445,7 +445,7 @@ disable=raw-checker-failed,
         unused-argument,
         too-many-nested-blocks,
         too-many-statements,
-        
+        too-many-branches,
 
 
 # Enable the message, report, category or checker with the given id(s). You can
